<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorScheme"
    tools:context=".ui.RegisterActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:text="@string/sign_up"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_signup"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/insert_your_user_name"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/edt_user_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_user_name" />


    <EditText
        android:id="@+id/edt_user_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/insert_your_user_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_user_email"
        app:layout_constraintTop_toBottomOf="@id/tv_user_email" />

    <TextView
        android:id="@+id/tv_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/edt_user_email"
        app:layout_constraintTop_toBottomOf="@id/edt_user_email" />

    <EditText
        android:id="@+id/edt_user_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/insert_your_user_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_user_password"
        app:layout_constraintTop_toBottomOf="@id/tv_user_password" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSecondary"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_password" />
</androidx.constraintlayout.widget.ConstraintLayout>